[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/LandingPad.gd" type="Script" id=1]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.4815, 0.0651878 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.492, 0.0465 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.435294, 0.0431373, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "throbbing"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.435294, 0.0431373, 1 ), Color( 1, 1, 1, 1 ), Color( 0.972549, 0.435294, 0.0431373, 1 ) ]
}

[node name="LandingPad" type="StaticBody2D"]
scale = Vector2( 1000, 1000 )
script = ExtResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color( 0.972549, 0.435294, 0.0431373, 1 )
mesh = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -0.493 )

[node name="LandingCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.002, 0.045 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.001, -0.449 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.4925, -0.2365 )
scale = Vector2( 0.15085, 0.16465 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/throbbing = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
